# pango-sharp

./: Makefile.am  README.md  configure.ac  m4.custom
sources/: Makefile.am  Pango-1.0-merged.gir  pango-sharp-api.raw  pango-sharp.metadata  pango-sharp.snk
sources/custom/: Context.cs  Coverage.cs  FontFace.cs  FontFamily.cs  FontMap.cs  Layout.cs  TabArray.cs
sources/glue/: Makefile.am
